# concise-GOTURN

./: CMakeLists.txt  README.md
scripts/: runTracker.sh
src/helper/: bounding_box.cpp  bounding_box.h
src/loader/: loader_base.cpp  loader_base.h
src/network/: regressor.cpp  regressor.h
src/tracker/: tracker.cpp  tracker.h
src/visualizer/: runTracker.cpp
